<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.wrmndfzzy.atomize.MainActivity">

    <Button
        android:id="@+id/select"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="false"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/select_photo" />

    <TextView
        android:id="@+id/imgPath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/select"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/no_image"
        android:textAlignment="center"
        android:textColor="#9e9e9e" />

    <TextView
        android:id="@+id/devBy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/devBy"
        android:textSize="5pt" />

    <ProgressBar
        android:id="@+id/progBar"
        style="@android:style/Widget.Material.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/devBy"
        android:layout_marginBottom="10dp"
        android:indeterminate="true"
        android:visibility="invisible" />

    <Button
        android:id="@+id/atomize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/progBar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorPrimary"
        android:onClick="atomize"
        android:text="@string/atomString" />

    <Switch
        android:id="@+id/deleteSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/atomize"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:checked="true" />

    <TextView
        android:id="@+id/deleteSwitchHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/deleteSwitch"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:text="@string/delString" />

    <ImageView
        android:id="@+id/imgPreview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/deleteSwitchHint"
        android:layout_below="@id/imgPath"
        android:contentDescription="@null"
        android:src="@drawable/atom_watermark" />

</RelativeLayout>
